--- a/public/css/paginas/busqueda.css
+++ b/public/css/paginas/busqueda.css
@@ -87,39 +87,36 @@ body {
 
 .rating {
     display: flex;
-    flex-direction: row-reverse; /* pintar de izquierda a derecha */
-    justify-content: center; /* centramos las estrellas */
+    flex-direction: row-reverse; 
+    justify-content: center; 
     gap: 5px;
 }
 
 
 .rating input {
-    display: none; /* ocultamos radio buttons */
+    display: none; 
 }
 
 .rating label {
     font-size: 30px;
-    color: #ccc; /* estrellas grises */
+    color: #ccc; 
     cursor: pointer;
     transition: color 0.2s;
 }
 
-/* Hover: pintar estrellas hasta el cursor */
 .rating label:hover,
 .rating label:hover ~ label {
     color: gold;
 }
 
-/* Estrellas seleccionadas se quedan doradas */
 .rating input:checked ~ label {
     color: gold;
 }
 
-/* Botón filtrar */
 .btn-filtrar {
     background-color: #ff914d;
     color: #fff;
-    font-family: 'Lexend', sans-serif; /* letra más coqueta */
+    font-family: 'Lexend', sans-serif; 
     font-size: 16px;
     padding: 10px 15px;
     border: none;
@@ -131,6 +128,32 @@ body {
 .btn-filtrar:hover {
     background-color: #ff7a1a;
 }
+.rating-todas {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.rating-todas label {
+    font-size: 16px; 
+    color: #333;      
+    cursor: pointer;
+    transition: color 0.2s;
+}
+
+.rating-todas input:checked + label {
+    font-weight: bold;  
+}
+
+
+.rating-todas input:checked + label {
+    color: #333;     
+    font-weight: bold; 
+}
+
+.rating-todas label:hover {
+    color: #333;
+}
+
 
 
 @media (max-width: 768px) {
