--- a/public/css/layout/modal_mensaje.css
+++ b/public/css/layout/modal_mensaje.css
@@ -12,6 +12,7 @@
 }
 
 .modal-content {
+
     background-color: #fff;
     margin: 10% auto; /* centrado vertical y horizontal */
     padding: 20px;
@@ -36,6 +37,7 @@
 .modal-content input,
 .modal-content textarea,
 .modal-content button {
+ font-family: 'Lexend';
     width: 100%;
     margin-top: 10px;
     padding: 8px;
@@ -44,7 +46,7 @@
 
 /* Botón enviar modal específico */
 .modal-content button {
-    background-color: #4CAF50;
+    background-color: #ff914d;
     color: white;
     border: none;
     border-radius: 5px;
@@ -53,5 +55,17 @@
 }
 
 .modal-content button:hover {
-    background-color: #45a049;
+    background-color: #ff914d;
+}
+#mensajeExito {
+    display: none;
+    color: #2e7d32;            /* verde */
+    background-color: #e8f5e9;  /* fondo muy suave */
+    padding: 8px 12px;
+    border-radius: 6px;
+    font-size: 14px;
+    text-align: center;
+    margin-top: 10px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    transition: opacity 0.3s ease-in-out;
 }
