--- a/public/css/paginas/administrador/admin_servicios.css
+++ b/public/css/paginas/administrador/admin_servicios.css
@@ -1,10 +1,10 @@
 /* Fuente predeterminada */
 body {
+    margin: 0;
     font-family: 'Lexend', sans-serif;
     background-color: #FF914D; /* color principal de toda la página */
     color: #333;
-    margin: 0;
-    padding: 20px;
+    padding: 0;
 }
 
 /* Título */
